[package]
authors = ["Yao Achi <achi.noel@hotmail.com>"]
name = "htcache"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ynachi/htcache"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22.0"
dashmap = "5.5.3"
rustc-hash = "1.1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"

#opentelemetry = "0.21"
#opentelemetry_sdk = "0.21"
#opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
#tracing-opentelemetry = "0.22"

[dev-dependencies]
criterion = "0.5.1"
rayon = "1.8.1"
dashmap = "5.5.3"
csv = "1.1.6"
tokio-test = "0.4.2"

[[bench]]
name = "htcache"
harness = false

